2010-04-20  Junichi Satoh  <junichi@rworks.jp>

	* extras/check_other_languages.sh: Added missing '/'.

2010-04-19 Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Fixed the delete the actual 
	user feature hidding the red cross in this user and with 
	internal control 

2010-04-19 Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed a var definition 
	error

2010-04-19 Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added the parameter style 
	to print_select_from_sql() function

2010-04-19 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: rollback to the fixed (r2563) in the function
	"get_db_value_filter".

2010-04-19 Pablo de la Concepción <pablo.concepcion@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: Make the services
	part (Enterprise) work nicely.

	* godmode/agentes/configurar_agente.php: Added enterprise hook for the 
	services parameters.

2010-04-19 Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/javascript/pandora.js: Added function agent_module_autocomplete
	to use with a text box, a hidden field and a selector to select an agent
	and a module from the agent.

2010-04-19  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager.php, 
	godmode/modules/manage_network_components.php, 
	godmode/modules/manage_network_templates_form.php: Changed the substr()
	to mb_strimwidth(). Strings should be truncated with displayed length,
	not number of characters.

	* godmode/include/functions.php: Added wrapper mb_strimwidth().

2010-04-16 Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Added process of services
	paramters (Enterprise feature)

	* godmode/agentes/module_manager_editor_prediction.php: Changed control
	to select the agent and the module. 
	Added code to create a module from a service (Enterprise fature).
	