@@ -1,3 +1,9 @@
+2010-04-21 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/javascript/pandora.js: small improve, added new parameter into
+	the function "agent_module_autocomplete", the parameter is "noneValue" for
+	add a option for none module in the select of modules
+
 2010-04-20  Junichi Satoh  <junichi@rworks.jp>
 
 	* extras/check_other_languages.sh: Added missing '/'.
